--- a/My_sporting_achievments/My_sporting_achievments/Views/ExercisePage.xaml
+++ b/My_sporting_achievments/My_sporting_achievments/Views/ExercisePage.xaml
@@ -6,29 +6,24 @@
              mc:Ignorable="d"
              x:Class="My_sporting_achievments.Views.ExercisePage"
              NavigationPage.HasNavigationBar="False">
-    
- 
+     
     <ContentPage.Content>
         <StackLayout BackgroundColor="#000000">
-            <ListView x:Name="exerciseList" ItemsSource="{Binding TrainCollection}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <ViewCell.View>
-                                <StackLayout Orientation="Horizontal">
-                                    <Label Text="{Binding NameExercise}" FontSize="23" TextColor="#d9daf0" x:Name="NameExLable">
-                                        <Label.GestureRecognizers>
-                                            <TapGestureRecognizer
-                                                Command="{Binding ExerciseSelected}" 
-                                                CommandParameter="{Binding .}"/>
-                                        </Label.GestureRecognizers>                                        
-                                    </Label>
-                                </StackLayout>
-                            </ViewCell.View>
-                        </ViewCell>
+            <CollectionView x:Name="exerciseList" ItemsSource="{Binding TrainCollection}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>                       
+                        <StackLayout Orientation="Horizontal">
+                                <Label Text="{Binding NameExercise}" FontSize="23" TextColor="#d9daf0" x:Name="NameExLable">
+                                    <Label.GestureRecognizers>
+                                        <TapGestureRecognizer
+                                            Command="{Binding ExerciseSelected}" 
+                                            CommandParameter="{Binding .}"/>
+                                    </Label.GestureRecognizers>                                        
+                                </Label>                                    
+                         </StackLayout>
                     </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
             <Button Command="{Binding CreateTrainCommand}"
                 Text="Add new train" 
                 VerticalOptions="EndAndExpand"
