--- a/My_sporting_achievments/My_sporting_achievments/Views/ExercisePage.xaml
+++ b/My_sporting_achievments/My_sporting_achievments/Views/ExercisePage.xaml
@@ -9,7 +9,8 @@
      
     <ContentPage.Content>
         <StackLayout BackgroundColor="#000000">
-            <CollectionView x:Name="exerciseList" ItemsSource="{Binding TrainCollection}">
+            <CollectionView x:Name="exerciseList" ItemsSource="{Binding TrainCollection}" 
+                            SelectedItem="{Binding SelectedToExercise, Mode=TwoWay}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>                       
                         <StackLayout Orientation="Horizontal">
